// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner A default spinner 1`] = `
.c1 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 0ms infinite;
  animation: eIzBTy 1000ms linear 0ms infinite;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c2 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 76.92307692307692ms infinite;
  animation: eIzBTy 1000ms linear 76.92307692307692ms infinite;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c3 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 153.84615384615384ms infinite;
  animation: eIzBTy 1000ms linear 153.84615384615384ms infinite;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c4 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 230.76923076923077ms infinite;
  animation: eIzBTy 1000ms linear 230.76923076923077ms infinite;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c5 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 307.6923076923077ms infinite;
  animation: eIzBTy 1000ms linear 307.6923076923077ms infinite;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c6 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 384.61538461538464ms infinite;
  animation: eIzBTy 1000ms linear 384.61538461538464ms infinite;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c7 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 461.53846153846155ms infinite;
  animation: eIzBTy 1000ms linear 461.53846153846155ms infinite;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c8 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 538.4615384615385ms infinite;
  animation: eIzBTy 1000ms linear 538.4615384615385ms infinite;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c9 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 615.3846153846154ms infinite;
  animation: eIzBTy 1000ms linear 615.3846153846154ms infinite;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c10 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 692.3076923076923ms infinite;
  animation: eIzBTy 1000ms linear 692.3076923076923ms infinite;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c11 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 769.2307692307693ms infinite;
  animation: eIzBTy 1000ms linear 769.2307692307693ms infinite;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c12 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 846.1538461538462ms infinite;
  animation: eIzBTy 1000ms linear 846.1538461538462ms infinite;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c13 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 923.0769230769231ms infinite;
  animation: eIzBTy 1000ms linear 923.0769230769231ms infinite;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 30px;
  position: relative;
  width: 30px;
}

<div
  className="c0 "
  size={30}
>
  <div
    className="c1"
    speed={1000}
  />
  <div
    className="c2"
    speed={1000}
  />
  <div
    className="c3"
    speed={1000}
  />
  <div
    className="c4"
    speed={1000}
  />
  <div
    className="c5"
    speed={1000}
  />
  <div
    className="c6"
    speed={1000}
  />
  <div
    className="c7"
    speed={1000}
  />
  <div
    className="c8"
    speed={1000}
  />
  <div
    className="c9"
    speed={1000}
  />
  <div
    className="c10"
    speed={1000}
  />
  <div
    className="c11"
    speed={1000}
  />
  <div
    className="c12"
    speed={1000}
  />
  <div
    className="c13"
    speed={1000}
  />
</div>
`;

exports[`Spinner Spinner can be resized 1`] = `
.c1 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 0ms infinite;
  animation: eIzBTy 1000ms linear 0ms infinite;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c2 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 76.92307692307692ms infinite;
  animation: eIzBTy 1000ms linear 76.92307692307692ms infinite;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c3 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 153.84615384615384ms infinite;
  animation: eIzBTy 1000ms linear 153.84615384615384ms infinite;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c4 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 230.76923076923077ms infinite;
  animation: eIzBTy 1000ms linear 230.76923076923077ms infinite;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c5 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 307.6923076923077ms infinite;
  animation: eIzBTy 1000ms linear 307.6923076923077ms infinite;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c6 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 384.61538461538464ms infinite;
  animation: eIzBTy 1000ms linear 384.61538461538464ms infinite;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c7 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 461.53846153846155ms infinite;
  animation: eIzBTy 1000ms linear 461.53846153846155ms infinite;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c8 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 538.4615384615385ms infinite;
  animation: eIzBTy 1000ms linear 538.4615384615385ms infinite;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c9 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 615.3846153846154ms infinite;
  animation: eIzBTy 1000ms linear 615.3846153846154ms infinite;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c10 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 692.3076923076923ms infinite;
  animation: eIzBTy 1000ms linear 692.3076923076923ms infinite;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c11 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 769.2307692307693ms infinite;
  animation: eIzBTy 1000ms linear 769.2307692307693ms infinite;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c12 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 846.1538461538462ms infinite;
  animation: eIzBTy 1000ms linear 846.1538461538462ms infinite;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c13 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 923.0769230769231ms infinite;
  animation: eIzBTy 1000ms linear 923.0769230769231ms infinite;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 200px;
  position: relative;
  width: 200px;
}

<div
  className="c0 "
  size={200}
>
  <div
    className="c1"
    speed={1000}
  />
  <div
    className="c2"
    speed={1000}
  />
  <div
    className="c3"
    speed={1000}
  />
  <div
    className="c4"
    speed={1000}
  />
  <div
    className="c5"
    speed={1000}
  />
  <div
    className="c6"
    speed={1000}
  />
  <div
    className="c7"
    speed={1000}
  />
  <div
    className="c8"
    speed={1000}
  />
  <div
    className="c9"
    speed={1000}
  />
  <div
    className="c10"
    speed={1000}
  />
  <div
    className="c11"
    speed={1000}
  />
  <div
    className="c12"
    speed={1000}
  />
  <div
    className="c13"
    speed={1000}
  />
</div>
`;

exports[`Spinner Spinner can change markger color 1`] = `
.c1 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 0ms infinite;
  animation: eIzBTy 1000ms linear 0ms infinite;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c2 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 76.92307692307692ms infinite;
  animation: eIzBTy 1000ms linear 76.92307692307692ms infinite;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c3 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 153.84615384615384ms infinite;
  animation: eIzBTy 1000ms linear 153.84615384615384ms infinite;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c4 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 230.76923076923077ms infinite;
  animation: eIzBTy 1000ms linear 230.76923076923077ms infinite;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c5 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 307.6923076923077ms infinite;
  animation: eIzBTy 1000ms linear 307.6923076923077ms infinite;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c6 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 384.61538461538464ms infinite;
  animation: eIzBTy 1000ms linear 384.61538461538464ms infinite;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c7 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 461.53846153846155ms infinite;
  animation: eIzBTy 1000ms linear 461.53846153846155ms infinite;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c8 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 538.4615384615385ms infinite;
  animation: eIzBTy 1000ms linear 538.4615384615385ms infinite;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c9 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 615.3846153846154ms infinite;
  animation: eIzBTy 1000ms linear 615.3846153846154ms infinite;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c10 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 692.3076923076923ms infinite;
  animation: eIzBTy 1000ms linear 692.3076923076923ms infinite;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c11 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 769.2307692307693ms infinite;
  animation: eIzBTy 1000ms linear 769.2307692307693ms infinite;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c12 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 846.1538461538462ms infinite;
  animation: eIzBTy 1000ms linear 846.1538461538462ms infinite;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c13 {
  background-color: red;
  -webkit-animation: eIzBTy 1000ms linear 923.0769230769231ms infinite;
  animation: eIzBTy 1000ms linear 923.0769230769231ms infinite;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 30px;
  position: relative;
  width: 30px;
}

<div
  className="c0 "
  size={30}
>
  <div
    className="c1"
    speed={1000}
  />
  <div
    className="c2"
    speed={1000}
  />
  <div
    className="c3"
    speed={1000}
  />
  <div
    className="c4"
    speed={1000}
  />
  <div
    className="c5"
    speed={1000}
  />
  <div
    className="c6"
    speed={1000}
  />
  <div
    className="c7"
    speed={1000}
  />
  <div
    className="c8"
    speed={1000}
  />
  <div
    className="c9"
    speed={1000}
  />
  <div
    className="c10"
    speed={1000}
  />
  <div
    className="c11"
    speed={1000}
  />
  <div
    className="c12"
    speed={1000}
  />
  <div
    className="c13"
    speed={1000}
  />
</div>
`;

exports[`Spinner Spinner can have n number of markers 1`] = `
.c1 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 0ms infinite;
  animation: eIzBTy 1000ms linear 0ms infinite;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c2 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 50ms infinite;
  animation: eIzBTy 1000ms linear 50ms infinite;
  -webkit-transform: rotate(18deg) translate(0,-160%);
  -ms-transform: rotate(18deg) translate(0,-160%);
  transform: rotate(18deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c3 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 100ms infinite;
  animation: eIzBTy 1000ms linear 100ms infinite;
  -webkit-transform: rotate(36deg) translate(0,-160%);
  -ms-transform: rotate(36deg) translate(0,-160%);
  transform: rotate(36deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c4 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 150ms infinite;
  animation: eIzBTy 1000ms linear 150ms infinite;
  -webkit-transform: rotate(54deg) translate(0,-160%);
  -ms-transform: rotate(54deg) translate(0,-160%);
  transform: rotate(54deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c5 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 200ms infinite;
  animation: eIzBTy 1000ms linear 200ms infinite;
  -webkit-transform: rotate(72deg) translate(0,-160%);
  -ms-transform: rotate(72deg) translate(0,-160%);
  transform: rotate(72deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c6 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 250ms infinite;
  animation: eIzBTy 1000ms linear 250ms infinite;
  -webkit-transform: rotate(90deg) translate(0,-160%);
  -ms-transform: rotate(90deg) translate(0,-160%);
  transform: rotate(90deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c7 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 300ms infinite;
  animation: eIzBTy 1000ms linear 300ms infinite;
  -webkit-transform: rotate(108deg) translate(0,-160%);
  -ms-transform: rotate(108deg) translate(0,-160%);
  transform: rotate(108deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c8 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 350ms infinite;
  animation: eIzBTy 1000ms linear 350ms infinite;
  -webkit-transform: rotate(126deg) translate(0,-160%);
  -ms-transform: rotate(126deg) translate(0,-160%);
  transform: rotate(126deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c9 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 400ms infinite;
  animation: eIzBTy 1000ms linear 400ms infinite;
  -webkit-transform: rotate(144deg) translate(0,-160%);
  -ms-transform: rotate(144deg) translate(0,-160%);
  transform: rotate(144deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c10 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 450ms infinite;
  animation: eIzBTy 1000ms linear 450ms infinite;
  -webkit-transform: rotate(162deg) translate(0,-160%);
  -ms-transform: rotate(162deg) translate(0,-160%);
  transform: rotate(162deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c11 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 500ms infinite;
  animation: eIzBTy 1000ms linear 500ms infinite;
  -webkit-transform: rotate(180deg) translate(0,-160%);
  -ms-transform: rotate(180deg) translate(0,-160%);
  transform: rotate(180deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c12 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 550ms infinite;
  animation: eIzBTy 1000ms linear 550ms infinite;
  -webkit-transform: rotate(198deg) translate(0,-160%);
  -ms-transform: rotate(198deg) translate(0,-160%);
  transform: rotate(198deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c13 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 600ms infinite;
  animation: eIzBTy 1000ms linear 600ms infinite;
  -webkit-transform: rotate(216deg) translate(0,-160%);
  -ms-transform: rotate(216deg) translate(0,-160%);
  transform: rotate(216deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c14 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 650ms infinite;
  animation: eIzBTy 1000ms linear 650ms infinite;
  -webkit-transform: rotate(234deg) translate(0,-160%);
  -ms-transform: rotate(234deg) translate(0,-160%);
  transform: rotate(234deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c15 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 700ms infinite;
  animation: eIzBTy 1000ms linear 700ms infinite;
  -webkit-transform: rotate(252deg) translate(0,-160%);
  -ms-transform: rotate(252deg) translate(0,-160%);
  transform: rotate(252deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c16 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 750ms infinite;
  animation: eIzBTy 1000ms linear 750ms infinite;
  -webkit-transform: rotate(270deg) translate(0,-160%);
  -ms-transform: rotate(270deg) translate(0,-160%);
  transform: rotate(270deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c17 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 800ms infinite;
  animation: eIzBTy 1000ms linear 800ms infinite;
  -webkit-transform: rotate(288deg) translate(0,-160%);
  -ms-transform: rotate(288deg) translate(0,-160%);
  transform: rotate(288deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c18 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 850ms infinite;
  animation: eIzBTy 1000ms linear 850ms infinite;
  -webkit-transform: rotate(306deg) translate(0,-160%);
  -ms-transform: rotate(306deg) translate(0,-160%);
  transform: rotate(306deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c19 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 900ms infinite;
  animation: eIzBTy 1000ms linear 900ms infinite;
  -webkit-transform: rotate(324deg) translate(0,-160%);
  -ms-transform: rotate(324deg) translate(0,-160%);
  transform: rotate(324deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c20 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 950ms infinite;
  animation: eIzBTy 1000ms linear 950ms infinite;
  -webkit-transform: rotate(342deg) translate(0,-160%);
  -ms-transform: rotate(342deg) translate(0,-160%);
  transform: rotate(342deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 30px;
  position: relative;
  width: 30px;
}

<div
  className="c0 "
  size={30}
>
  <div
    className="c1"
    speed={1000}
  />
  <div
    className="c2"
    speed={1000}
  />
  <div
    className="c3"
    speed={1000}
  />
  <div
    className="c4"
    speed={1000}
  />
  <div
    className="c5"
    speed={1000}
  />
  <div
    className="c6"
    speed={1000}
  />
  <div
    className="c7"
    speed={1000}
  />
  <div
    className="c8"
    speed={1000}
  />
  <div
    className="c9"
    speed={1000}
  />
  <div
    className="c10"
    speed={1000}
  />
  <div
    className="c11"
    speed={1000}
  />
  <div
    className="c12"
    speed={1000}
  />
  <div
    className="c13"
    speed={1000}
  />
  <div
    className="c14"
    speed={1000}
  />
  <div
    className="c15"
    speed={1000}
  />
  <div
    className="c16"
    speed={1000}
  />
  <div
    className="c17"
    speed={1000}
  />
  <div
    className="c18"
    speed={1000}
  />
  <div
    className="c19"
    speed={1000}
  />
  <div
    className="c20"
    speed={1000}
  />
</div>
`;

exports[`Spinner Spinner makers radius can be adjusted 1`] = `
.c1 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 0ms infinite;
  animation: eIzBTy 1000ms linear 0ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c2 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 76.92307692307692ms infinite;
  animation: eIzBTy 1000ms linear 76.92307692307692ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c3 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 153.84615384615384ms infinite;
  animation: eIzBTy 1000ms linear 153.84615384615384ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c4 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 230.76923076923077ms infinite;
  animation: eIzBTy 1000ms linear 230.76923076923077ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c5 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 307.6923076923077ms infinite;
  animation: eIzBTy 1000ms linear 307.6923076923077ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c6 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 384.61538461538464ms infinite;
  animation: eIzBTy 1000ms linear 384.61538461538464ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c7 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 461.53846153846155ms infinite;
  animation: eIzBTy 1000ms linear 461.53846153846155ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c8 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 538.4615384615385ms infinite;
  animation: eIzBTy 1000ms linear 538.4615384615385ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c9 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 615.3846153846154ms infinite;
  animation: eIzBTy 1000ms linear 615.3846153846154ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c10 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 692.3076923076923ms infinite;
  animation: eIzBTy 1000ms linear 692.3076923076923ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c11 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 769.2307692307693ms infinite;
  animation: eIzBTy 1000ms linear 769.2307692307693ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c12 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 846.1538461538462ms infinite;
  animation: eIzBTy 1000ms linear 846.1538461538462ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c13 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 1000ms linear 923.0769230769231ms infinite;
  animation: eIzBTy 1000ms linear 923.0769230769231ms infinite;
  border-radius: 30px;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 30px;
  position: relative;
  width: 30px;
}

<div
  className="c0 "
  size={30}
>
  <div
    className="c1"
    speed={1000}
  />
  <div
    className="c2"
    speed={1000}
  />
  <div
    className="c3"
    speed={1000}
  />
  <div
    className="c4"
    speed={1000}
  />
  <div
    className="c5"
    speed={1000}
  />
  <div
    className="c6"
    speed={1000}
  />
  <div
    className="c7"
    speed={1000}
  />
  <div
    className="c8"
    speed={1000}
  />
  <div
    className="c9"
    speed={1000}
  />
  <div
    className="c10"
    speed={1000}
  />
  <div
    className="c11"
    speed={1000}
  />
  <div
    className="c12"
    speed={1000}
  />
  <div
    className="c13"
    speed={1000}
  />
</div>
`;

exports[`Spinner Spinner speed can be set 1`] = `
.c1 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 0ms infinite;
  animation: eIzBTy 2000ms linear 0ms infinite;
  -webkit-transform: rotate(0deg) translate(0,-160%);
  -ms-transform: rotate(0deg) translate(0,-160%);
  transform: rotate(0deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c2 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 153.84615384615384ms infinite;
  animation: eIzBTy 2000ms linear 153.84615384615384ms infinite;
  -webkit-transform: rotate(27.692307692307693deg) translate(0,-160%);
  -ms-transform: rotate(27.692307692307693deg) translate(0,-160%);
  transform: rotate(27.692307692307693deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c3 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 307.6923076923077ms infinite;
  animation: eIzBTy 2000ms linear 307.6923076923077ms infinite;
  -webkit-transform: rotate(55.38461538461539deg) translate(0,-160%);
  -ms-transform: rotate(55.38461538461539deg) translate(0,-160%);
  transform: rotate(55.38461538461539deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c4 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 461.53846153846155ms infinite;
  animation: eIzBTy 2000ms linear 461.53846153846155ms infinite;
  -webkit-transform: rotate(83.07692307692308deg) translate(0,-160%);
  -ms-transform: rotate(83.07692307692308deg) translate(0,-160%);
  transform: rotate(83.07692307692308deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c5 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 615.3846153846154ms infinite;
  animation: eIzBTy 2000ms linear 615.3846153846154ms infinite;
  -webkit-transform: rotate(110.76923076923077deg) translate(0,-160%);
  -ms-transform: rotate(110.76923076923077deg) translate(0,-160%);
  transform: rotate(110.76923076923077deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c6 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 769.2307692307693ms infinite;
  animation: eIzBTy 2000ms linear 769.2307692307693ms infinite;
  -webkit-transform: rotate(138.46153846153845deg) translate(0,-160%);
  -ms-transform: rotate(138.46153846153845deg) translate(0,-160%);
  transform: rotate(138.46153846153845deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c7 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 923.0769230769231ms infinite;
  animation: eIzBTy 2000ms linear 923.0769230769231ms infinite;
  -webkit-transform: rotate(166.15384615384616deg) translate(0,-160%);
  -ms-transform: rotate(166.15384615384616deg) translate(0,-160%);
  transform: rotate(166.15384615384616deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c8 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 1076.923076923077ms infinite;
  animation: eIzBTy 2000ms linear 1076.923076923077ms infinite;
  -webkit-transform: rotate(193.84615384615387deg) translate(0,-160%);
  -ms-transform: rotate(193.84615384615387deg) translate(0,-160%);
  transform: rotate(193.84615384615387deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c9 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 1230.7692307692307ms infinite;
  animation: eIzBTy 2000ms linear 1230.7692307692307ms infinite;
  -webkit-transform: rotate(221.53846153846155deg) translate(0,-160%);
  -ms-transform: rotate(221.53846153846155deg) translate(0,-160%);
  transform: rotate(221.53846153846155deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c10 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 1384.6153846153845ms infinite;
  animation: eIzBTy 2000ms linear 1384.6153846153845ms infinite;
  -webkit-transform: rotate(249.23076923076923deg) translate(0,-160%);
  -ms-transform: rotate(249.23076923076923deg) translate(0,-160%);
  transform: rotate(249.23076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c11 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 1538.4615384615386ms infinite;
  animation: eIzBTy 2000ms linear 1538.4615384615386ms infinite;
  -webkit-transform: rotate(276.9230769230769deg) translate(0,-160%);
  -ms-transform: rotate(276.9230769230769deg) translate(0,-160%);
  transform: rotate(276.9230769230769deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c12 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 1692.3076923076924ms infinite;
  animation: eIzBTy 2000ms linear 1692.3076923076924ms infinite;
  -webkit-transform: rotate(304.61538461538464deg) translate(0,-160%);
  -ms-transform: rotate(304.61538461538464deg) translate(0,-160%);
  transform: rotate(304.61538461538464deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c13 {
  background-color: #262D33;
  -webkit-animation: eIzBTy 2000ms linear 1846.1538461538462ms infinite;
  animation: eIzBTy 2000ms linear 1846.1538461538462ms infinite;
  -webkit-transform: rotate(332.3076923076923deg) translate(0,-160%);
  -ms-transform: rotate(332.3076923076923deg) translate(0,-160%);
  transform: rotate(332.3076923076923deg) translate(0,-160%);
  height: 20%;
  left: 48%;
  opacity: 0.25;
  position: absolute;
  top: 40%;
  width: 6%;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 30px;
  position: relative;
  width: 30px;
}

<div
  className="c0 "
  size={30}
>
  <div
    className="c1"
    speed={2000}
  />
  <div
    className="c2"
    speed={2000}
  />
  <div
    className="c3"
    speed={2000}
  />
  <div
    className="c4"
    speed={2000}
  />
  <div
    className="c5"
    speed={2000}
  />
  <div
    className="c6"
    speed={2000}
  />
  <div
    className="c7"
    speed={2000}
  />
  <div
    className="c8"
    speed={2000}
  />
  <div
    className="c9"
    speed={2000}
  />
  <div
    className="c10"
    speed={2000}
  />
  <div
    className="c11"
    speed={2000}
  />
  <div
    className="c12"
    speed={2000}
  />
  <div
    className="c13"
    speed={2000}
  />
</div>
`;
